--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,6 +8,7 @@
 	--black-border: #26292d;
 	--white: #fff;
 	--purple: #5c62ec;
+	--gradient: linear-gradient(90deg, #291d53, #4d1740, #5a1e2d);
 
 	/* Nav */
 	--nav-bg: var(--black);
@@ -17,6 +18,7 @@
 	/* Header */
 	--header-bg: var(--black);
 	--header-text: var(--white);
+	--header-gradient: var(--gradient);
 
 	/* Footer */
 	--footer-bg: var(--black);
@@ -47,8 +49,6 @@
 
 html,
 body {
-	display: flex;
-	flex-direction: column;
 	min-height: 100vh;
 
 	font-family: 'DM Sans', sans-serif;
@@ -57,6 +57,15 @@ body {
 	/* Light mode */
 	background-color: var(--page-bg);
 	color: var(--text-color);
+}
+
+#root {
+	min-height: 100vh;
+}
+#App {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 }
 
 /* General */
@@ -119,33 +128,6 @@ body {
 	top: 1px;
 }
 
-/* Btn outline */
-
-.btn-outline {
-	display: flex;
-	column-gap: 10px;
-	align-items: center;
-
-	height: 48px;
-	padding: 12px 20px;
-
-	border-radius: 5px;
-	border: 1px solid #000;
-	background-color: #fff;
-	color: #000;
-
-	transition: opacity 0.2s ease-in;
-}
-
-.btn-outline:hover {
-	opacity: 0.8;
-}
-
-.btn-outline:active {
-	position: relative;
-	top: 1px;
-}
-
 /* Projects  */
 
 .projects {
@@ -154,25 +136,6 @@ body {
 	flex-wrap: wrap;
 	column-gap: 30px;
 	row-gap: 30px;
-}
-
-.project {
-	max-width: 370px;
-	background-color: var(--project-card-bg);
-	box-shadow: var(--box-shadow);
-	border-radius: 10px;
-}
-
-.project__img {
-	border-radius: 10px;
-}
-
-.project__title {
-	padding: 15px 20px 25px;
-	font-weight: 700;
-	font-size: 24px;
-	line-height: 1.3;
-	color: var(--project-card-text);
 }
 
 /* Project details */
